<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:orientation="vertical"
        tools:context=".activity.CreateStatementActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_height"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_date"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/date"
                android:textSize="@dimen/textview_textsize" />

            <EditText
                android:id="@+id/editText_date_zapoln"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/marginLeft"
                android:layout_marginLeft="@dimen/marginLeft"
                android:textSize="@dimen/textview_textsize"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_height"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/forestry"
                android:textSize="@dimen/textview_textsize" />

            <EditText
                android:id="@+id/editText_forestry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/marginLeft"
                android:layout_marginLeft="@dimen/marginLeft"
                android:textSize="@dimen/textview_textsize"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_height"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_tax_category"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/tax_category"
                android:textSize="@dimen/textview_textsize" />

            <Spinner
                android:id="@+id/sp_tax_category"
                android:layout_width="match_parent"
                android:layout_height="@dimen/layout_height"
                android:layout_marginStart="@dimen/marginLeft"
                android:layout_marginLeft="@dimen/marginLeft"
                android:textSize="@dimen/textview_textsize"
                android:spinnerMode="dialog"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_height"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/realization"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/realization"
                android:textSize="@dimen/textview_textsize" />

            <Spinner
                android:id="@+id/sp_realization"
                android:layout_width="match_parent"
                android:layout_height="@dimen/layout_height"
                android:layout_marginStart="@dimen/marginLeft"
                android:layout_marginLeft="@dimen/marginLeft"
                android:textSize="@dimen/textview_textsize"
                android:spinnerMode="dialog"/>
        </LinearLayout>

        <CheckBox
            android:id="@+id/inaccessibility"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginTop"
            android:text="@string/inaccessibility"
            android:textSize="@dimen/textview_textsize" />

        <CheckBox
            android:id="@+id/fond"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fond"
            android:textSize="@dimen/textview_textsize"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/marginTop"
            android:orientation="horizontal">

            <Button
                android:id="@+id/statement_mdo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="@dimen/button_padding"
                android:text="@string/vedom_mdo"
                android:textSize="@dimen/button_textsize"
                style="?android:attr/buttonStyle"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/stock_and_tax"
                android:layout_width="@dimen/layout_width_button_save"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/marginTop"
                android:padding="@dimen/button_padding"
                android:text="@string/zapas"
                android:textSize="@dimen/button_textsize" />

            <Button
                android:id="@+id/save_create_statement"
                android:layout_width="@dimen/layout_width_button_save"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/marginTop"
                android:layout_marginBottom="36dp"
                android:padding="@dimen/button_padding"
                android:text="@string/save"
                android:textSize="@dimen/button_textsize" />

        </LinearLayout>


    </LinearLayout>
</ScrollView>