<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:text="@string/undergrowth"
        android:textSize="@dimen/textview_textsize"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/marginTop">

        <TextView
            android:id="@+id/poroda_value1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            android:text="@string/poroda"
            android:textSize="@dimen/textview_textsize" />

        <Spinner
            android:id="@+id/spinner_poroda_value1"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marginLeft"
            android:layout_marginLeft="@dimen/marginLeft"
            android:paddingBottom="2dp"
            android:gravity="center"
            android:spinnerMode="dialog"
            android:textSize="@dimen/textview_textsize"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTop"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/amount_thousand"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/amount_thousand"
            android:textSize="@dimen/textview_textsize" />

        <EditText
            android:id="@+id/editText_amount_thousand"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/marginLeft"
            android:layout_marginLeft="@dimen/marginLeft"
            android:paddingBottom="2dp"
            android:inputType="numberDecimal"
            android:textSize="@dimen/textview_textsize"/>
    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginTop"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/preservation_area"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/preservation_area"
                android:textSize="@dimen/textview_textsize" />

            <EditText
                android:id="@+id/editText_preservation_area"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/marginLeft"
                android:gravity="bottom"
                android:inputType="numberDecimal"
                android:layout_marginLeft="@dimen/marginLeft"
                android:textSize="@dimen/textview_textsize"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/structure"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/sostav"
            android:textSize="@dimen/textview_textsize" />

        <EditText
            android:id="@+id/editText_structure"
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_height"
            android:layout_marginStart="@dimen/marginLeft"
            android:layout_marginLeft="@dimen/marginLeft"
            android:textSize="@dimen/textview_textsize"/>
    </LinearLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_height_view_line"
        android:layout_marginTop="@dimen/marginTop"
        android:background="?android:attr/listDivider" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:text="@string/pollution"
        android:layout_marginTop="@dimen/marginTop"
        android:textSize="@dimen/textview_textsize"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="left"
        android:text="@string/radiation_report"
        android:layout_marginTop="@dimen/marginTop"
        android:textSize="@dimen/textview_textsize"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTop"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/textView_number_report"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/number_report"
            android:gravity="center_vertical"
            android:textSize="@dimen/textview_textsize" />

        <EditText
            android:id="@+id/editText_report_number"
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_height"
            android:layout_marginStart="@dimen/marginLeft"
            android:layout_marginLeft="@dimen/marginLeft"
            android:inputType="numberDecimal"
            android:textSize="@dimen/textview_textsize"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTop"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/textView_date_report"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/date_report"
            android:textSize="@dimen/textview_textsize" />

        <EditText
            android:id="@+id/editText_report_date"
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_height"
            android:layout_marginStart="@dimen/marginLeft"
            android:layout_marginLeft="@dimen/marginLeft"
            android:inputType="date"
            android:textSize="@dimen/textview_textsize"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTop"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/textView_radiation_pollution_density"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/radiation_pollution_density"
            android:textSize="@dimen/textview_textsize" />

        <EditText
            android:id="@+id/editText_radiation_pollution_density"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:layout_marginStart="@dimen/marginLeft"
            android:layout_marginLeft="@dimen/marginLeft"
            android:textSize="@dimen/textview_textsize"/>
    </LinearLayout>

    <TextView
        android:id="@+id/specific_activity"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="left"
        android:text="@string/specific_activity"
        android:layout_marginTop="@dimen/marginTop"
        android:gravity="center_vertical"
        android:textSize="@dimen/textview_textsize"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTop"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/textView_specific_activity_del"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/specific_activity_del"
            android:gravity="center_vertical"
            android:textSize="@dimen/textview_textsize" />

        <EditText
            android:id="@+id/editText_specific_activity_del"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:layout_marginStart="@dimen/marginLeft"
            android:layout_marginLeft="@dimen/marginLeft"
            android:textSize="@dimen/textview_textsize"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTop"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/textView_specific_activity_drov"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/specific_activity_drov"
            android:gravity="center_vertical"
            android:textSize="@dimen/textview_textsize" />

        <EditText
            android:id="@+id/editText_specific_activity_drov"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:layout_marginStart="@dimen/marginLeft"
            android:layout_marginLeft="@dimen/marginLeft"
            android:textSize="@dimen/textview_textsize"/>
    </LinearLayout>
</LinearLayout>
</ScrollView>