<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="4dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

        <TextView
            android:id="@+id/vidPolzovan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vid_polz"
            android:textSize="@dimen/textview_textsize" />

        <EditText
            android:id="@+id/editText_vid_polzov"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marginLeft"
            android:layout_marginLeft="@dimen/marginLeft"
            android:textSize="@dimen/textview_textsize" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

        <TextView
            android:id="@+id/name_forestry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forestry"
            android:textSize="@dimen/textview_textsize" />

            <EditText
                android:id="@+id/editText_itemrecyclerview_forestry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/marginLeft"
                android:layout_marginLeft="@dimen/marginLeft"
                android:textSize="@dimen/textview_textsize" />

        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textSize="@dimen/textview_textsize" />

        <EditText
            android:id="@+id/editText_itemrecyclerview_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marginLeft"
            android:layout_marginLeft="@dimen/marginLeft"
            android:textSize="@dimen/textview_textsize" />

    </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginTop"
            android:layout_gravity="end"
            android:orientation="horizontal">


            <Button
                android:id="@+id/itemrecycler_change_statement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change"
                android:padding="@dimen/button_padding"
                android:textSize="@dimen/button_textsize" />

            <Button
                android:id="@+id/itemrecycler_delete_statement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete"
                android:padding="@dimen/button_padding"
                android:textSize="@dimen/button_textsize" />



        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>